# instagram-schemas

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/instagram_schemas/: __init__.py  accounts.py  base.py  comments.py  highlights.py  locations.py  media.py  posts.py  stories.py
tests/: conftest.py
tests/data/: instagram_user_data.json  instagram_user_highlights.json  instagram_user_media.json  instagram_user_post_details.json  instagram_user_stories.json
tests/integration/: test_integration_real_data.py  test_mongodb_integration.py
tests/unit/: test_accounts.py  test_comments.py  test_highlights.py  test_locations.py  test_media.py  test_mongodb_serialization.py  test_posts.py  test_stories.py
