[project]
name = "instagram-schemas"
version = "0.1.0"
description = "Pydantic schemas for Instagram data, reusable across projects."
authors = [
  { name="K. Jonathan Klüser", email="jonathan.klueser@live.de" }
]
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
  "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "requests>=2.0.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "python-dotenv>=1.1.1"
]

[tool.setuptools.packages.find]
where = ["src"]
